examples/sample-product-chart/chart-test/reports/scenario-gateway-api-envoy-gateway-security-policy-attach-20260601-110836-5/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"envoy"},"spec":{"controllerName":"gateway.envoyproxy.io/gatewayclass-controller"}}
    creationTimestamp: "2026-06-01T15:09:28Z"
    finalizers:
    - gateway-exists-finalizer.gateway.networking.k8s.io
    generation: 1
    name: envoy
    resourceVersion: "674"
    uid: 9e8cf2b9-ebfe-4362-93c2-7c0a8ff78250
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
  status:
    conditions:
    - lastTransitionTime: "2026-06-01T15:09:28Z"
      message: Valid GatewayClass
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
kind: List
metadata:
  resourceVersion: ""
